--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,7 @@
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
+                <version>0.8.5</version>
                 <reportSets>
                     <reportSet>
                         <reports>
