--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,11 @@
             <version>5.6.2</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+        <groupId>com.google.guava</groupId>
+        <artifactId>guava</artifactId>
+        <version>28.0-jre</version>
+        </dependency>
     </dependencies>
 
     <properties>
