--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,9 @@
                     <groupId>org.openjfx</groupId>
                     <artifactId>javafx-maven-plugin</artifactId>
                     <version>0.0.5</version>
+                    <configuration>
+                        <mainClass>ViewProject/pl.comp.view.Window</mainClass>
+                    </configuration>
                 </plugin>
             </plugins>
         </pluginManagement>
@@ -97,6 +100,7 @@
                     <encoding>UTF-8</encoding>
                     <consoleOutput>true</consoleOutput>
                     <linkXRef>false</linkXRef>
+                    <excludes>**/module-info.java</excludes>
                 </configuration>
                 <reportSets>
                     <reportSet>
