Implement bidirectional binding

--- a/Model/pom.xml
+++ b/Model/pom.xml
@@ -19,6 +19,10 @@
             <artifactId>guava</artifactId>
             <version>28.0-jre</version>
         </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-controls</artifactId>
+        </dependency>
     </dependencies>
 
     <properties>
