Add save and load button, functionality for this button in progress

--- a/View/src/main/resources/pl/comp/view/Sudoku.properties
+++ b/View/src/main/resources/pl/comp/view/Sudoku.properties
@@ -9,3 +9,11 @@ loadButtonLabel=Load
 easyLevelLabel=Easy
 mediumLevelLabel=Medium
 hardLevelLabel=Hard
+
+# Error Labels
+fileNotFound=File wasn't found!
+loadFile=Load file
+saveFile=Save file
+noFileChosen=No file chosen!
+readingFile=Error reading file!
+error=Error!
