Implement saving original board

--- a/View/src/main/resources/pl/comp/view/Sudoku.properties
+++ b/View/src/main/resources/pl/comp/view/Sudoku.properties
@@ -17,3 +17,4 @@ saveFile=Save file
 noFileChosen=No file chosen!
 readingFile=Error reading file!
 error=Error!
+saveError=An error occurred when saving to file!
