--- a/View/src/main/resources/pl/comp/view/Sudoku.properties
+++ b/View/src/main/resources/pl/comp/view/Sudoku.properties
@@ -18,3 +18,6 @@ noFileChosen=No file chosen!
 readingFile=Error reading file!
 error=Error!
 saveError=An error occurred when saving to file!
+
+# Logger labels
+loadFileLog=Loaded file: 
