--- a/View/src/main/resources/pl/comp/view/Sudoku.properties
+++ b/View/src/main/resources/pl/comp/view/Sudoku.properties
@@ -21,3 +21,8 @@ saveError=An error occurred when saving to file!
 
 # Logger labels
 loadFileLog=Loaded file: 
+languageChoose=Choose language
+language_en=English
+language_fr=Francais
+language_pl=Polski
+difficultyChoose=Choose difficulty
