New excepetions added

--- a/Model/src/main/resources/Exceptions.properties
+++ b/Model/src/main/resources/Exceptions.properties
@@ -1,2 +1,5 @@
 # Exceptions Labels
 InputMismatch=Number must be in range 1 to 9
+DaoReadException=I can't read files!
+DaoWriteException=I can't write dao file!
+Null=Null
