--- a/View/src/main/resources/pl/comp/view/Sudoku.properties
+++ b/View/src/main/resources/pl/comp/view/Sudoku.properties
@@ -27,3 +27,5 @@ language_fr=Francais
 language_pl=Polski
 difficultyChoose=Choose difficulty
 savedFileLog=Saved file: 
+changeLanguage=Language changed!
+currentLanguage=Current language: English
