--- a/Model/src/main/resources/Exceptions.properties
+++ b/Model/src/main/resources/Exceptions.properties
@@ -3,3 +3,6 @@ InputMismatch=Number must be in range 1 to 9
 DaoReadException=I can't read files!
 DaoWriteException=I can't write dao file!
 Null=Null
+boardCreate=Board created!
+readFile=File read!
+writeFile=File written!
