--- a/Model/src/main/resources/Exceptions.properties
+++ b/Model/src/main/resources/Exceptions.properties
@@ -7,3 +7,5 @@ boardCreate=Board created!
 readFile=File read!
 writeFile=File written!
 noKeyError=Could not find a value for key:
+connection.success=Successfully connected to database!
+connection.failure=Failed to connect to database!
