Exceptions Resource bundle added new properties, List View and input view added.

--- a/View/src/main/resources/pl/comp/view/Sudoku.properties
+++ b/View/src/main/resources/pl/comp/view/Sudoku.properties
@@ -29,3 +29,4 @@ difficultyChoose=Choose difficulty
 savedFileLog=Saved file: 
 changeLanguage=Language changed!
 currentLanguage=Current language: English
+chooseFile=List of sudoku
