--- a/Model/src/main/resources/Exceptions.properties
+++ b/Model/src/main/resources/Exceptions.properties
@@ -9,3 +9,6 @@ writeFile=File written!
 noKeyError=Could not find a value for key:
 connection.success=Successfully connected to database!
 connection.failure=Failed to connect to database!
+noTableCreated=Can't generate SQL base!
+loadTable=Loaded table!
+loadSudokuToTable=Loaded Sudoku to table
