Load and save controller with bugs :(

--- a/View/src/main/resources/pl/comp/view/Sudoku.properties
+++ b/View/src/main/resources/pl/comp/view/Sudoku.properties
@@ -30,3 +30,5 @@ savedFileLog=Saved file:
 changeLanguage=Language changed!
 currentLanguage=Current language: English
 chooseFile=List of sudoku
+loadError=An error occured, while reading SQL base!
+loaded=Loaded data
