powiedz mi dlaczego nie działasz?

--- a/View/src/main/resources/pl/comp/view/Sudoku.properties
+++ b/View/src/main/resources/pl/comp/view/Sudoku.properties
@@ -32,3 +32,5 @@ currentLanguage=Current language: English
 chooseFile=List of sudoku
 loadError=An error occured, while reading SQL base!
 loaded=Loaded data
+loadBaseButtonLabel=Load from SQL base
+saveBaseButtonLabel=Save to SQL Base
