Jak ja nienawidze baz danych!

--- a/Model/src/main/resources/Exceptions.properties
+++ b/Model/src/main/resources/Exceptions.properties
@@ -12,4 +12,4 @@ connection.failure=Failed to connect to database!
 noTableCreated=Can't generate SQL base!
 loadTable=Loaded table!
 loadSudokuToTable=Loaded Sudoku to table
-io.error Error occured during I/O operation
+io.error=Error occured during I/O operation
