Database works yaaaaayyyyyy

--- a/Model/src/main/resources/Exceptions.properties
+++ b/Model/src/main/resources/Exceptions.properties
@@ -9,7 +9,9 @@ writeFile=File written!
 noKeyError=Could not find a value for key:
 connection.success=Successfully connected to database!
 connection.failure=Failed to connect to database!
-noTableCreated=Can't generate SQL base!
+noTableCreated=Can't generate SQL base or it exists already!
 loadTable=Loaded table!
 loadSudokuToTable=Loaded Sudoku to table
 io.error=Error occured during I/O operation
+saveSudoku=Sudoku saved!
+tableCreated=Created tables!
