Jak ja nienawidze baz danych!

--- a/View/src/main/resources/pl/comp/view/Sudoku.properties
+++ b/View/src/main/resources/pl/comp/view/Sudoku.properties
@@ -2,8 +2,8 @@
 backButtonLabel=Back
 resetButtonLabel=Reset
 startButtonLabel=Start
-saveButtonLabel=Save
-loadButtonLabel=Load
+saveButtonLabel=Save to file
+loadButtonLabel=Load file
 
 # Level Labels
 easyLevelLabel=Easy
